--- a/WoWList/package.json
+++ b/WoWList/package.json
@@ -9,5 +9,7 @@
   "author": "",
   "license": "BSD",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "bower": "^1.3.8"
+  }
 }
