--- a/AnimatedStuff/package.json
+++ b/AnimatedStuff/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "BSD"
+  "license": "BSD",
+  "devDependencies": {
+    "bower": "^1.3.8"
+  }
 }
